--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,8 +56,9 @@ dependencies:
   firebase_analytics: ^11.6.0
   firebase_remote_config: ^5.5.0
   firebase_messaging: ^15.2.10
-  firebase_in_app_messaging: ^0.8.1+10
   flutter_local_notifications: ^19.4.0
+  firebase_in_app_messaging: ^0.8.1+10
+  firebase_app_installations: ^0.3.3
   
 
 
