--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,7 @@ dependencies:
   flutter_local_notifications: ^19.4.0
   firebase_in_app_messaging: ^0.8.1+10
   firebase_app_installations: ^0.3.3
+  firebase_auth: ^5.7.0
   
 
 
