--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,7 @@ dependencies:
   firebase_in_app_messaging: ^0.8.1+10
   firebase_app_installations: ^0.3.3
   firebase_auth: ^5.7.0
+  google_sign_in: ^6.1.0
   
 
 
@@ -89,6 +90,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
   - assets/images/flutter-clouds.jpg
+  - assets/images/firebase.png
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
